--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -11,6 +11,13 @@
             body {
                 font-family: 'Courier New', Courier, monospace;
             }
+
+            header {
+                margin-bottom: 20px;
+            }
         </style>
     </head>
     <body>
+        <header>
+            <a href="/">Home</a>
+        </header>
