--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -9,11 +9,16 @@
         <title>blog.110399.xyz</title>
         <style>
             body {
-                font-family: 'Courier New', Courier, monospace;
+                font-family: 'Baskerville', serif;
             }
 
             header {
                 margin-bottom: 20px;
+            }
+
+            main {
+                font-size: 14pt;
+                line-height: 25pt;
             }
         </style>
     </head>
