--- a/articles/index.ejs
+++ b/articles/index.ejs
@@ -4,7 +4,7 @@
         <% for (post of posts) { %>
           <a href="/posts/<%= post.slice(0, -3) %>">
             <div class="post">
-              &gt; <%= post.toUpperCase() %>
+              &gt; <%= data[post].category + ': ' + post.toUpperCase() %>
             </div>
           </a>
         <% } %>
