--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -16,7 +16,7 @@
                 margin-bottom: 20px;
             }
 
-            header a:visited {
+            a:visited {
                 color: blue;
             }
 
@@ -29,11 +29,6 @@
 
             .post:hover {
                 margin-left: 10px;
-            }
-
-            .post:visited {
-                color: black;
-                text-decoration: overline;
             }
 
             main {
