--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -12,23 +12,37 @@
                 font-family: 'Baskerville', serif;
             }
 
+            h2 {
+                font-weight: lighter;
+            }
+
             header {
-                margin-bottom: 20px;
+                margin: 20px;
             }
 
             a:visited {
                 color: blue;
             }
 
-            .post {
-                display: block;
-                margin: 5px 0 10px 0;
-                color: blue;
+            #blog {
+                width: 80vw;
+                height: auto;
+                margin: 0 auto;
+            }
+
+            li {
+                list-style-type: '>';
                 transition: all 0.25s ease;
             }
 
-            .post:hover {
+            li:hover {
                 margin-left: 10px;
+            }
+
+            .post {
+                display: block;
+                margin: 5px 0 10px 10px;
+                color: blue;
             }
 
             main {
