--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -30,6 +30,16 @@
                 margin: 0 auto;
             }
 
+            ul#cats {
+                display: inline-block;
+            }
+
+            ul#cats li {
+                float: left;
+                margin: 0 10px 0 0;
+                list-style-type: none !important;
+            }
+
             li {
                 list-style-type: '>';
                 transition: all 0.25s ease;
