fix: header change

--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -69,5 +69,5 @@
     </head>
     <body>
         <header>
-            <a href="/">Home</a>
+            blog.110399.xyz | <a href="/">Home</a>
         </header>
