Prefetch blog to wake up glitch?

--- a/articles/partials/header.ejs
+++ b/articles/partials/header.ejs
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="The personal blog of Jake, including stories, personal histories, and comments.">
         <meta name="author" content="Jake Williams">
+	
+	<link rel="prefetch" href="blog.110399.xyz" />
 
         <title><%= title %> | blog.110399.xyz</title>
 
