fix: fixed an issue with no title on a post, and moved an article to a draft folder

--- a/articles/index.ejs
+++ b/articles/index.ejs
@@ -13,7 +13,10 @@
           <% for (post of posts) { %>
             <li class="<%= data[post].category %> all">
               <a class="post" href="/posts/<%= post.slice(0, -3) %>">
+                <% console.log(data[post].title); %>
+                <% if (data[post].title !== '') { %>
                 <%= data[post].category + ': ' + data[post].title.toUpperCase() %>
+                <%} else {}%>
               </a>
             </li>
           <% } %>
